--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Gurukul</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_main">Gurukul</string>
 </resources>
